deployment/temp-manual/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apam-config-app
  namespace: apam-config
  labels:
    app: apam-config-app
spec:
  selector:
    app: apam-config-app
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
