deployment/temp-manual/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
  name: apam-config-app
  namespace: apam-config
spec:
  rules:
    - host: apam-config-app.maxdevsec.com
      http:
        paths:
          - backend:
              service:
                name: apam-config-app
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - apam-config-app.maxdevsec.com
      secretName: maxdevsec-tls
